--- a/ArtStation_Dashboard/Views/Category/Index.cshtml
+++ b/ArtStation_Dashboard/Views/Category/Index.cshtml
@@ -6,7 +6,7 @@
 }
 @if (!string.IsNullOrEmpty(TempData["Message"] as string))
 {
-    <div class="alert alert-success mt-3 mb-2">
+    <div class="alert alert-success mt-3 mb-2 text-white">
         @TempData["message"]
     </div>
 }
