--- a/ArtStation_Dashboard/Views/Product/Delete.cshtml
+++ b/ArtStation_Dashboard/Views/Product/Delete.cshtml
@@ -8,10 +8,10 @@
 
     <partial name="PartialView/_DetailsDeleteView" />
 
-<div class="form-group mt-4">
-    <input type="submit" value="@(("حذف المنتج","Delete Product").Localize(language))" class="btn btn-danger" />
+<div class="form-group ">
     <a asp-action="Index" class="btn btn-light ms-2">
         @(language == "en" ? "Back to List" : "العودة إلى القائمة")
     </a>
+    <input type="submit" value="@(("حذف المنتج","Delete Product").Localize(language))" class="btn btn-danger" />
 </div>
 </form>
