--- a/ArtStation_Dashboard/Views/Shared/_OurLayout.cshtml
+++ b/ArtStation_Dashboard/Views/Shared/_OurLayout.cshtml
@@ -19,28 +19,6 @@
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
 
-
-    <style>
-        @@Media print {
-        .no-print {
-                display: none !important;  }
-
-            body {
-                -webkit-print-color-adjust: exact;
-            }
-
-            table {
-                page-break-inside: avoid;
-            }
-
-            #invoice {
-                box-shadow: none !important;
-                border: none !important;
-            }
-
-            }
-        </style>
-    
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="apple-touch-icon" sizes="76x76" href="~/assets/img/apple-icon.png">
@@ -91,6 +69,14 @@
 
                 @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
                             {
+                                 <li class="nav-item">
+                        <a class="nav-link text-white " asp-action="Index" asp-controller="Banner">
+                            <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+                                <i class="fa-solid fa-building"></i>
+                            </div>
+                            <span class="nav-link-text ms-1 me-1">@(("اللوحات الاعلانيه", "Banners").Localize(lang))</span>
+                        </a>
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link text-white " asp-action="Index" asp-controller="Trader">
                             <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
@@ -113,6 +99,23 @@
                                 <i class="fa-solid fa-cart-shopping"></i>
                             </div>
                             <span class="nav-link-text ms-1 me-1">@(("طلبات", "Orders").Localize(lang))</span>
+                        </a>
+                    </li>
+                     <li class="nav-item">
+                        <a class="nav-link text-white " asp-action="Index" asp-controller="Category">
+                            <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+                                <i class="material-icons opacity-10"> </i>
+                            </div>
+                            <span class="nav-link-text ms-1 me-1">@(("التصنيفات", "Categories").Localize(lang))</span>
+                        </a>
+
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white " asp-action="Index" asp-controller="Product">
+                            <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+                                <i class="fa-brands fa-product-hunt"></i>
+                            </div>
+                            <span class="nav-link-text ms-1 me-1">@(("المنتجات", "Products").Localize(lang))</span>
                         </a>
                     </li>
 
@@ -149,66 +152,24 @@
 
                     }
               
+       
+             
                 
-                <li class="nav-item">
-                    <a class="nav-link text-white " href="./pages/virtual-reality.html">
-                        <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
-                            <i class="material-icons opacity-10">view_in_ar</i>
-                        </div>
-                        <span class="nav-link-text ms-1">Virtual Reality</span>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-white " href="./pages/rtl.html">
-                        <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
-                            <i class="material-icons opacity-10">format_textdirection_r_to_l</i>
-                        </div>
-                        <span class="nav-link-text ms-1">RTL</span>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-white " href="./pages/notifications.html">
-                        <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
-                            <i class="material-icons opacity-10">notifications</i>
-                        </div>
-                        <span class="nav-link-text ms-1">Notifications</span>
-                        
-                    </a>
-                </li>
                 <li class="nav-item mt-3">
                     <h6 class="ps-4 ms-2 text-uppercase text-xs text-white font-weight-bolder opacity-8">Account pages</h6>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white " href="./pages/profile.html">
+                    <a class="nav-link text-white asp-action="GetUser" asp-Controller="User">
                         <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
                             <i class="material-icons opacity-10">person</i>
                         </div>
                         <span class="nav-link-text ms-1">Profile</span>
                     </a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link text-white " href="./pages/sign-in.html">
-                        <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
-                            <i class="material-icons opacity-10">login</i>
-                        </div>
-                        <span class="nav-link-text ms-1">Sign In</span>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-white " href="./pages/sign-up.html">
-                        <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
-                            <i class="material-icons opacity-10">assignment</i>
-                        </div>
-                        <span class="nav-link-text ms-1">Sign Up</span>
-                    </a>
-                </li>
+              
             </ul>
         </div>
-        <div class="sidenav-footer position-absolute w-100 bottom-0 ">
-            <div class="mx-3">
-                <a class="btn bg-gradient-primary mt-4 w-100" href="https://www.creative-tim.com/product/material-dashboard-pro?ref=sidebarfree" type="button">Upgrade to pro</a>
-            </div>
-        </div>
+       
     </aside>
   
     @* <partial name="_aside"></partial> *@
