--- a/ArtStation_Dashboard/Views/Shared/_OurLayout.cshtml
+++ b/ArtStation_Dashboard/Views/Shared/_OurLayout.cshtml
@@ -109,7 +109,7 @@
 
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white " asp-action="Index" asp-controller="Product">
+                        <a class="nav-link text-white " asp-action="ProductSections" asp-controller="Product">
                             <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
                                 <i class="fa-brands fa-product-hunt"></i>
                             </div>
@@ -147,7 +147,7 @@
 
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white " asp-action="Index" asp-controller="Product">
+                        <a class="nav-link text-white " asp-action="TraderProducts" asp-controller="Product">
                             <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
                                 <i class="fa-brands fa-product-hunt"></i>
                             </div>
