--- a/ArtStation_Dashboard/Views/Product/PartialView/_FlavourPartialView.cshtml
+++ b/ArtStation_Dashboard/Views/Product/PartialView/_FlavourPartialView.cshtml
@@ -108,7 +108,7 @@
 
         flavourAR.value = "";
         flavourEN.value = "";
-
+        flavourIndex++;
         reindexFlavourInputs();
     });
 
